# arbiter

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  go.mod  go.sum  install.sh
.github/workflows/: arbiter-release.yml  ci.yml  openclaw-plugin-publish.yml
api/: openapi.yaml
api/examples/: canonical-verify-request.json  openai-intercept-request.json
api/schemas/: canonical-request.v1alpha1.schema.json  signed-decision.schema.json
apps/control-plane/: .dockerignore  Dockerfile  README.md  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
cmd/arbiter/: main.go
cmd/interceptor/: main.go
deploy/: docker-compose.yml  env.example  litellm-config.yaml
docs/: homebrew-release.md  pilot-readiness-checklist.md  pilot-soak-runbook.md
examples/litellm-harness/: README.md  litellm_arbiter_harness.py  requirements.txt  test_litellm_arbiter_harness.py
integrations/: README.md
integrations/openclaw-plugin/: CHANGELOG.md  README.md  SEMVER.md  index.js  openclaw.plugin.json  package-lock.json  package.json
integrations/python/: CHANGELOG.md  README.md  SEMVER.md  pyproject.toml
integrations/python/arbiter_integrations/: __init__.py  http_client.py  litellm.py  openclaw.py
integrations/python/tests/: test_http_client.py  test_litellm.py  test_openclaw.py
internal/audit/: multi.go  multi_test.go  postgres.go  recorder.go
internal/bundles/: digest.go  digest_test.go  types.go
internal/executorauth/: token.go  token_test.go
policy/: arbiter.json
(+126 files in other folders)
