[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter-integrations"
version = "0.1.0"
description = "Drop-in Python integration wrappers for Arbiter guardrails."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Arbiter Contributors" }
]
keywords = ["arbiter", "opa", "policy", "guardrails", "llm", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yajasmalhotra/arbiter"
Repository = "https://github.com/yajasmalhotra/arbiter"
Issues = "https://github.com/yajasmalhotra/arbiter/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["arbiter_integrations*"]
